Fixes whitespace between quicklinks and menu

--- a/src/css/skins/printdeal/themes/fr-responsive/global/_product-nav.scss
+++ b/src/css/skins/printdeal/themes/fr-responsive/global/_product-nav.scss
@@ -26,7 +26,6 @@
     cursor: pointer;
 
     @include breakpoint(medium) {
-        margin-right: 0;
         margin-left: 0;
         padding-left: 0.5em;
         width: $product-nav-width;
